// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`is should correctly render expenses summary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $0.00
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with more than one expense 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling 
    $0.00
  </h1>
</div>
`;
